fixed mongo deletion error. Added background image

--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>Star Wars News Scraper</title>
-    <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='./css/style.css'>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Star Wars News Scraper</title>
+  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css'>
+  <link rel='stylesheet' href='./css/style.css'>
+</head>
+
+<body>
     <div class='jumbotron'>
       <h2>Star Wars News Scraper</h2>
+      <button class="testButton">TEST</button>
     </div>
+    <div class="main">
+
     <div class='container'>
       <div class='row'>
-      <div class='col-md-9' id="articles"></div>
-      <div class='col-md-3' id="notes"></div>
+        <div class='col-md-9' id="articles"></div>
+        <div class='col-md-3' id="notes"></div>
+      </div>
     </div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./javascript/app.js"></script>
-  </body>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="./javascript/app.js"></script>
+</body>
+
 </html>
