--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 <body>
   <!-- Header -->
   <div class='header'>
-    <img id="header-logo" src="images/imperial-logo.png">
-    <h2 id="header-title">Star Wars News Scraper</h2>
+    <img id="logo" src="images/star-wars-news-scraper-logo.png">
+    <p>Articles may take a few seconds to show up. Please wait!</p>
   </div>
 
   <!-- Main -->
